--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@sf-ui/react": "*",
+    "@sf-ui/tokens": "*",
+    "@sf-ui/eslint-config": "*"
   },
   "license": "MIT",
   "devDependencies": {
