--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,6 +15,7 @@
     "@sf-ui/eslint-config": "*",
     "@sf-ui/react": "*",
     "@sf-ui/tokens": "*",
+    "@storybook/addon-a11y": "^7.6.10",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
