--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "dev": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "storybook build",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
     "@sf-ui/eslint-config": "*",
@@ -29,6 +30,7 @@
     "@storybook/blocks": "^7.6.8",
     "@storybook/react": "^7.6.8",
     "@storybook/react-vite": "^7.6.8",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^7.6.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
