--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "@sf-ui/ts-config/react.json",
-  "include": ["src"]
+  "extends": "@sf-digital-ui/ts-config/react.json",
+  "include": ["src"],
 }
