--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sf-ui/tokens",
+  "name": "@sf-digital-ui/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -14,8 +14,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@sf-ui/ts-config": "*",
-    "@sf-ui/eslint-config": "*",
+    "@sf-digital-ui/ts-config": "*",
+    "@sf-digital-ui/eslint-config": "*",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   }
