--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sf-digital-ui/react",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch --external react",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
@@ -18,7 +18,6 @@
     "@sf-digital-ui/tokens": "*",
     "@sf-digital-ui/ts-config": "*",
     "autoprefixer": "^10.4.17",
-    "concurrently": "^8.2.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "tsup": "^8.0.1",
