--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,6 +31,9 @@
     "@types/react-dom": "^18.2.18",
     "concurrently": "^8.2.2",
     "phosphor-react": "^1.4.1",
-    "react": "^18.2.0"
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "react": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwind-variants": "^0.1.20"
   }
 }
