--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -19,6 +19,7 @@
     "@sf-digital-ui/tokens": "*",
     "@sf-digital-ui/ts-config": "*",
     "autoprefixer": "^10.4.17",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "tsup": "^8.0.1",
