chore: bring typography to the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,14 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
+  
+
+  "[typescriptreact]": {
+    "editor.defaultFormatter": null
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": null
+  },
   "eslint.enable": true,
   "eslint.validate": ["javascript", "typescript"],
   "editor.formatOnSave": true,
