--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,8 @@
     ["tv\\((([^()]*|\\([^()]*\\))*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
-  
-
   "[typescriptreact]": {
     "editor.defaultFormatter": null
   },
