--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "turbo": "^1.11.3"
+  },
+  "dependencies": {
+    "lucide-react": "^0.320.0"
   }
 }
