--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
     "changeset": "changeset",
+    "cbum" : "rm -rf node_modules && rm package-lock.json && rm -rf packages/*/node_modules && npm install", 
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!docs && changeset publish"
   },
