--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@stitches/react": "^1.2.8",
     "@types/react": "^18.2.48",
