--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "concurrently": "^8.2.2",
