--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -17,6 +17,7 @@
     "@sf-digital-ui/react": "*",
     "@sf-digital-ui/tokens": "*",
     "@storybook/addon-a11y": "^7.6.10",
+    "lucide-react": "^0.341.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
