chore: lets hope that works

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           cache: "pnpm"
           cache-dependency-path: "**/pnpm-lock.yaml"
 
-      - run: pnpm ci
+      - run: pnpm install
 
       - name: Publish to NPM
         id: changesets
