--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "concurrently": "^8.2.2",
+    "lucide-react": "^0.341.0",
     "phosphor-react": "^1.4.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
