--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,7 +16,10 @@
     "@sf-digital-ui/eslint-config": "*",
     "@sf-digital-ui/react": "*",
     "@sf-digital-ui/tokens": "*",
+    "@sf-digital-ui/ts-config": "workspace:*",
     "@storybook/addon-a11y": "^7.6.10",
+    "@storybook/addon-docs": "^7.6.17",
+    "@storybook/theming": "^7.6.17",
     "lucide-react": "^0.341.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
