--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -30,6 +30,6 @@ jobs:
 
       - name: Deploy storybook
         working-directory: ./packages/docs
-        run: touch storybook-static/.nojekyll && pnpm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: touch storybook-static/.nojekyll && pnpm run deploy-storybook -- --install --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
