--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,6 +19,7 @@
     "@sf-digital-ui/ts-config": "workspace:*",
     "@storybook/addon-a11y": "^7.6.10",
     "@storybook/addon-docs": "^7.6.17",
+    "@storybook/cli": "^7.6.17",
     "@storybook/theming": "^7.6.17",
     "lucide-react": "^0.341.0",
     "polished": "^4.2.2",
