--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,21 +12,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 8
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: "pnpm"
-          cache-dependency-path: "**/pnpm-lock.yaml"
+          node-version: 20
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
-      - run: pnpm install
+      - run: npm ci
 
-      - run: pnpm run build
+      - run: npm run build
 
       # - name: Deploy storybook
       #   working-directory: ./packages/docs
