--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,15 +23,8 @@ jobs:
 
       - run: npm run build
 
-      # - name: Deploy storybook
-      #   working-directory: ./packages/docs
-      #   run: touch storybook-static/.nojekyll && pnpm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-      #   env:
-      #     GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
-
-      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.1
-        with:
-          install_command: pnpm install
-          build_command: pnpm run build
-          path: ./packages/docs/storybook-static
-          checkout: false
+      - name: Deploy storybook
+        working-directory: ./packages/docs
+        run: touch storybook-static/.nojekyll && npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        env:
+          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
