--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
   "eslint.enable": true,
   "eslint.validate": ["javascript", "typescript"],
   "editor.formatOnSave": true,
-  "eslint.useESLintClass": true
+  "eslint.useESLintClass": true,
+  "workbench.colorTheme": "Dracula"
 }
