--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,10 +13,13 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
+    "@mdx-js/react": "^3.0.1",
+    "@mdx-js/rollup": "^3.0.1",
     "@sf-digital-ui/eslint-config": "*",
     "@sf-digital-ui/react": "*",
     "@sf-digital-ui/tokens": "*",
     "@sf-digital-ui/ts-config": "*",
+    "@vitejs/plugin-vue": "^5.1.0",
     "lucide-react": "^0.341.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -24,20 +27,23 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.8",
-    "@storybook/addon-interactions": "^7.6.8",
-    "@storybook/addon-a11y": "^7.6.10",
-    "@storybook/cli": "^7.6.17",
-    "@storybook/theming": "^7.6.17",
-    "@storybook/addon-links": "^7.6.8",
-    "@storybook/addon-onboarding": "^1.0.10",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-a11y": "^8.2.5",
+    "@storybook/addon-docs": "^8.2.5",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-mdx-gfm": "^8.2.5",
+    "@storybook/addon-onboarding": "^8.2.5",
     "@storybook/addon-styling-webpack": "^0.0.6",
-    "@storybook/blocks": "^7.6.8",
-    "@storybook/react": "^7.6.8",
-    "@storybook/addon-docs": "^7.6.17",
-    "@storybook/react-vite": "^7.6.8",
+    "@storybook/blocks": "^8.2.5",
+    "@storybook/cli": "^8.2.5",
+    "@storybook/manager-api": "^8.2.5",
+    "@storybook/react": "^8.2.5",
+    "@storybook/react-vite": "^8.2.5",
     "@storybook/storybook-deployer": "^2.8.16",
-    "@storybook/test": "^7.6.8",
+    "@storybook/test": "^8.2.5",
+    "@storybook/theming": "^8.2.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -48,7 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
-    "storybook": "^7.6.8",
+    "storybook": "^8.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.11"
   }
