--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "turbo": "^1.11.3"
-  }
+    "turbo": "^2.0.13"
+  },
+  "packageManager": "npm@10.2.4",
+  "name": "design-system"
 }
