--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
+    "eslint-plugin-prettier": "^5.2.1",
     "turbo": "^2.1.3"
   },
   "packageManager": "npm@10.9.0",
