--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,49 +13,53 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "@mdx-js/react": "^3.0.1",
-    "@mdx-js/rollup": "^3.0.1",
+    "@mdx-js/react": "^3.1.0",
+    "@mdx-js/rollup": "^3.1.0",
     "@sf-digital-ui/eslint-config": "*",
     "@sf-digital-ui/react": "*",
     "@sf-digital-ui/tokens": "*",
     "@sf-digital-ui/ts-config": "*",
-    "@vitejs/plugin-vue": "^5.1.0",
-    "lucide-react": "^0.341.0",
-    "polished": "^4.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@storybook/addon-react-native-web": "^0.0.26",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "lucide-react": "^0.454.0",
+    "polished": "^4.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.1",
+    "react-native-web": "^0.19.13"
   },
   "license": "MIT",
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
-    "@storybook/addon-a11y": "^8.2.5",
-    "@storybook/addon-docs": "^8.2.5",
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/addon-mdx-gfm": "^8.2.5",
-    "@storybook/addon-onboarding": "^8.2.5",
-    "@storybook/addon-styling-webpack": "^0.0.6",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/cli": "^8.2.5",
-    "@storybook/manager-api": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/react-vite": "^8.2.5",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-a11y": "^8.4.2",
+    "@storybook/addon-docs": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-links": "^8.4.2",
+    "@storybook/addon-mdx-gfm": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/cli": "^8.4.2",
+    "@storybook/manager-api": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
     "@storybook/storybook-deployer": "^2.8.16",
-    "@storybook/test": "^8.2.5",
-    "@storybook/theming": "^8.2.5",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.6.15",
-    "storybook": "^8.2.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.11"
+    "@storybook/test": "^8.4.2",
+    "@storybook/theming": "^8.4.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "babel-plugin-react-native-web": "^0.19.13",
+    "eslint": "^9.14.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-storybook": "^0.11.0",
+    "storybook": "^8.4.2",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   }
 }
