--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -19,6 +19,8 @@
     "react-native": ">=0.60.0"
   },
   "devDependencies": {
+    "@sf-digital-ui/eslint-config": "*",
+    "@sf-digital-ui/tokens": "*",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
