--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -19,16 +19,19 @@
     "react-native": ">=0.60.0"
   },
   "devDependencies": {
-    "@sf-digital-ui/eslint-config": "*",
-    "@sf-digital-ui/tokens": "*",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
+    "@sf-digital-ui/eslint-config": "*",
+    "@sf-digital-ui/tokens": "*",
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.72.0",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "expo": "^52.0.18"
   }
 }
