--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
     "@sf-digital-ui/eslint-config": "*",
     "@sf-digital-ui/tokens": "*",
     "@sf-digital-ui/ts-config": "*",
