--- a/apps/react-native-doc/tsconfig.json
+++ b/apps/react-native-doc/tsconfig.json
@@ -3,8 +3,12 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@design-system": ["../../packages/react-native"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@design-system": [
+        "../../packages/react-native"
+      ]
     }
   },
   "include": [
@@ -12,6 +16,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "metro.config.js"
+    "metro.config.js",
+    "nativewind-env.d.ts"
   ]
 }
