--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -41,7 +41,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "^52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
