--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -8,7 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "yalc-add": "yalc add @sf-digital-ui/react-native",
+    "yalc-link": "yalc link @sf-digital-ui/react-native"
   },
   "jest": {
     "preset": "jest-expo"
