--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -10,9 +10,10 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts",
-    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch",
+    "dev": "concurrently \"tsup src/index.tsx --format esm,cjs --dts --watch\" \"yalc publish --push\"",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publish": "yalc push --watch"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
@@ -34,6 +35,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@sf-digital-ui/react-native": "file:.yalc/@sf-digital-ui/react-native",
     "expo": "^52.0.18"
   }
 }
