--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts",
-    "dev": "concurrently \"tsup src/index.tsx --format esm,cjs --dts --watch\" \"yalc publish --push\"",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch",
+    "testDev": "nodemon --watch dist/index.js --exec 'yalc push --watch'",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
     "publish": "yalc push --watch"
@@ -30,12 +31,9 @@
     "@sf-digital-ui/tokens": "*",
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.72.0",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@sf-digital-ui/react-native": "file:.yalc/@sf-digital-ui/react-native",
-    "expo": "^52.0.18"
   }
 }
