--- a/apps/react-native-doc/.yalc/@sf-digital-ui/react-native/package.json
+++ b/apps/react-native-doc/.yalc/@sf-digital-ui/react-native/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts",
-    "dev": "nodemon --watch dist/index.js --exec 'yalc push --watch'",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch & chokidar 'dist/**/*' -c 'npm run publish'",
     "prepublishOnly": "npm run build",
     "publish": "yalc push --watch"
   },
@@ -18,5 +18,5 @@
     "react": ">=16.8.0",
     "react-native": ">=0.60.0"
   },
-  "yalcSig": "5bd6f2ec3fb31e1d7ef6dd6ed4fd99a2"
+  "yalcSig": "031cb42dc1f2c0ce4185acbaafcd7aa7"
 }
