--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts",
-    "dev": "nodemon --watch dist/index.js --exec 'yalc push --watch'",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --watch & chokidar 'dist/**/*' -c 'npm run publish'",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build",
     "publish": "yalc push --watch"
@@ -30,7 +30,7 @@
     "@sf-digital-ui/tokens": "*",
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.72.0",
-    "nodemon": "^3.1.9",
+    "chokidar-cli": "^3.0.0",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
     "typescript": "^5.6.3"
