--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ dist
 .tubo
 apps/react-native-doc/yalc.lock
 apps/react-native-doc/.yalc/@sf-digital-ui/react-native/yalc.sig
+apps/react-native-doc/.yalc/@sf-digital-ui/react-native/package.json
