--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -34,5 +34,8 @@
     "react": "^18.3.1",
     "react-native": "^0.76.1",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "expo-checkbox": "^4.0.1"
   }
 }
