chore: update package versions in package-lock and package.json

--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -20,17 +20,17 @@
     "@ronradtke/react-native-markdown-display": "^8.0.0",
     "@sf-digital-ui/react-native": "file:.yalc/@sf-digital-ui/react-native",
     "@sf-digital-ui/tokens": "^3.3.3",
-    "expo": "^52.0.24",
+    "expo": "~52.0.35",
     "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.19",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -47,7 +47,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
