--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm ci
 
       - name: Run Tests
-        run: npm run test
+        run: cd ./apps/react-native-doc && npm run test
 
       - name: Publish to NPM
         id: changesets
