--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "workspaces": [
-    "packages/*",
-    "apps/*"
+    "packages/*"
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
@@ -10,8 +9,7 @@
     "cbum": "rm -rf node_modules && rm package-lock.json && rm -rf packages/*/node_modules && npm install",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish --filter=!@sf-digital-ui/docs",
-    "test": "npm run test --workspace=apps/react-native-doc"
+    "release": "turbo run build && changeset publish --filter=!@sf-digital-ui/docs"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
