--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,11 @@ jobs:
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run Tests
-        run: cd ./apps/react-native-doc && npm run test
+        run: cd ./apps/react-native-doc && npm ci && npm run test
 
       - name: Publish to NPM
         id: changesets
