--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    env:
+      CI: true
+      JEST_JUNIT_OUTPUT_DIR: ./junit/
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,7 +29,9 @@ jobs:
         run: npm ci
 
       - name: Run Tests
-        run: cd ./apps/react-native-doc && npm ci && npm run test
+        run: cd ./apps/react-native-doc && npm ci && npm run test:ci
+        env:
+          NODE_ENV: test
 
       - name: Publish to NPM
         id: changesets
