--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ packages/react/.turbo
 packages/docs/.turbo
 packages/tokens/.turbo
 apps/react-native-doc/coverage
+apps/react-native-doc/junit.xml
