--- a/apps/react-native-doc/package.json
+++ b/apps/react-native-doc/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "test:ci": "npm run test -- --testResultsProcessor=\"jest-junit\" --watchAll=false --ci --coverage",
+    "test:ci": "jest --ci --forceExit",
     "test:coverage": "jest --coverage",
     "yalc-add": "yalc add @sf-digital-ui/react-native",
     "yalc-link": "yalc link @sf-digital-ui/react-native"
@@ -49,7 +49,6 @@
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.4",
-    "jest-junit": "^16.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
