--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Tests
-        run: cd ./apps/react-native-doc && npm ci && npm run test:ci
-        env:
-          NODE_ENV: test
+      # - name: Run Tests
+      #   run: cd ./apps/react-native-doc && npm ci && npm run test:ci
+      #   env:
+      #     NODE_ENV: test
 
       - name: Publish to NPM
         id: changesets
