--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ packages/react/.turbo
 packages/docs/.turbo
 packages/tokens/.turbo
 apps/react-native-doc/coverage
+packages/react-native/src/.DS_Store
+packages/react-native/src/components/.DS_Store
