--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,23 +3,25 @@
     "**/.git": true,
     "**/dist": true
   },
-  "eslint.debug": true,
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.biome": "explicit",
+    "source.organizeImports": "explicit"
+	},
   "[typescriptreact]": {
-    "editor.defaultFormatter": null,
+    "editor.defaultFormatter": "biomejs.biome",
     "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    }
   },
   "[typescript]": {
-    "editor.defaultFormatter": null,
+    "editor.defaultFormatter": "biomejs.biome",
     "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": "explicit"
-    }
   },
-  "eslint.enable": true,
-  "eslint.validate": ["javascript", "typescript"],
+  "[javascriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+  "[javascript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
   "editor.formatOnSave": true,
-  "eslint.useESLintClass": true
+  "i18n-ally.localesPaths": ["src/i18n"],
 }
