--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "dev": "turbo run dev --parallel",
-    "build": "turbo run build",
-    "cbum": "rm -rf node_modules && rm package-lock.json && rm -rf packages/*/node_modules && npm install",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish --filter=!@sf-digital-ui/docs"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.27.9",
-    "eslint-plugin-prettier": "^5.2.1",
-    "turbo": "^2.2.3"
-  },
-  "packageManager": "npm@10.9.0",
-  "name": "design-system"
+	"private": true,
+	"workspaces": ["packages/*"],
+	"scripts": {
+		"dev": "turbo run dev --parallel",
+		"build": "turbo run build",
+		"cbum": "rm -rf node_modules && rm package-lock.json && rm -rf packages/*/node_modules && npm install",
+		"changeset": "changeset",
+		"version-packages": "changeset version",
+		"release": "turbo run build && changeset publish --filter=!@sf-digital-ui/docs"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@changesets/cli": "^2.27.9",
+		"lefthook": "^1.10.10",
+		"turbo": "^2.2.3"
+	},
+	"packageManager": "npm@10.9.0",
+	"name": "design-system"
 }
