--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,52 +1,47 @@
 {
-  "name": "@sf-digital-ui/react",
-  "version": "4.10.5",
-  "description": "",
-  "main": "./dist/index.js",
-  "style": "./dist/output.css",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "build": "npx tailwindcss -i ./src/index.css -o ./dist/output.css && tsup src/index.tsx --format esm, cjs --dts --external react",
-    "dev": "concurrently --kill-others \"npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch \" \"tsup src/index.tsx --format esm, cjs --dts --external react --watch\"",
-    "lint": "eslint src/**/*.ts* --fix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
-    "@sf-digital-ui/eslint-config": "*",
-    "@sf-digital-ui/tokens": "*",
-    "@sf-digital-ui/ts-config": "*",
-    "autoprefixer": "^10.4.20",
-    "eslint-plugin-prettier": "^5.2.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "concurrently": "^9.1.0",
-    "lucide-react": "^0.468.0",
-    "phosphor-react": "^1.4.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "react": "^19.0.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwind-variants": "^0.3.0"
-  }
+	"name": "@sf-digital-ui/react",
+	"version": "4.10.5",
+	"description": "",
+	"main": "./dist/index.js",
+	"style": "./dist/output.css",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"scripts": {
+		"build": "npx tailwindcss -i ./src/index.css -o ./dist/output.css && tsup src/index.tsx --format esm, cjs --dts --external react",
+		"dev": "concurrently --kill-others \"npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch \" \"tsup src/index.tsx --format esm, cjs --dts --external react --watch\""
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"devDependencies": {
+		"@sf-digital-ui/tokens": "*",
+		"@sf-digital-ui/ts-config": "*",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.16",
+		"tsup": "^8.3.5",
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-checkbox": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-popover": "^1.1.4",
+		"@radix-ui/react-radio-group": "^1.2.2",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-switch": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-toggle": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.6",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.2",
+		"concurrently": "^9.1.0",
+		"lucide-react": "^0.468.0",
+		"phosphor-react": "^1.4.1",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"react": "^19.0.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwind-variants": "^0.3.0"
+	}
 }
