--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["node_modules", ".expo", "ios", "android", ".vscode"]
+		"ignore": [
+			"node_modules",
+			".expo",
+			"ios",
+			"android",
+			".vscode",
+			"packages/docs/storybook-static"
+		]
 	},
 	"formatter": {
 		"enabled": true,
@@ -85,7 +92,7 @@
 									"kind": "functionParameter",
 									"scope": "any"
 								},
-								"formats": ["camelCase"]
+								"match": "(_|_[a-z][a-zA-Z0-9]*|[a-z][a-zA-Z0-9]*)"
 							},
 							{
 								"selector": {
