--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,21 +7,21 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.biome": "explicit",
     "source.organizeImports": "explicit"
-	},
+  },
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
   },
   "[javascriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[javascript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "editor.formatOnSave": true,
-  "i18n-ally.localesPaths": ["src/i18n"],
+  "i18n-ally.localesPaths": ["src/i18n"]
 }
