fix: correct working directory path for design system build in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build Design System Library
         run: npm run build
+        working-directory: ./packages/design-system  # Corrected path
 
       - name: Install and Link Library with Yalc
         run: |
