feat: tooltip component

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ packages/react/.turbo
 packages/docs/.turbo
 packages/tokens/.turbo
 apps/react-native-doc/coverage
+apps/react-native-doc/ios
 packages/react-native/src/.DS_Store
 packages/react-native/src/components/.DS_Store
